{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "gameplay",
            "id": "556b83be-37c8-40cc-bc9f-f1f09188276b",
            "actions": [
                {
                    "name": "SuctionLeft",
                    "type": "Button",
                    "id": "d0d88984-ccae-4f64-bc94-2a14783a9440",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "SuctionRight",
                    "type": "Button",
                    "id": "4a496ccf-7558-4f89-9c77-20a5df1c0f9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveLeft",
                    "type": "Value",
                    "id": "6e73083b-45f5-44fb-a696-427b16f52a7d",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveRight",
                    "type": "Value",
                    "id": "75b9e478-a666-4e19-9936-4bec5b3053f2",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b98191a0-10aa-4598-a9d8-797fa6a89ecd",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SuctionLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4547a612-cfd3-4fe4-b621-755420362a6c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SuctionRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1eb28c4a-63e7-4d68-87b3-359630f02763",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a3a4ecf-9a5a-4e92-8da4-c1645e445dbe",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}